--- a/authentication/templates/authentication/signup.html
+++ b/authentication/templates/authentication/signup.html
@@ -12,9 +12,19 @@
             <img src="{% static 'the_main_space/images/LogoMakr-05nrqV.png' %}" alt="">
             <h1>Inscrivez-vous</h1>
             <form method="post" enctype="multipart/form-data">
-                {{ form.as_p }}
-                {% csrf_token %} 
-                <button type="submit" >S’inscrire</button>
+                {{ form.username }}
+                {{ form.first_name }}
+                {{ form.last_name }}
+                {{ form.email }}
+                {{ form.password }}
+                {{ form.profile_photo }}
+                {% csrf_token %}
+                <div id="subscribe_return">
+                    <button type="submit" >S’inscrire</button>
+                    <a href="{% url 'login' %}" class="deconnexion_retour">
+                        Retour
+                    </a>
+                </div>
             </form>
         </div>
     </body>
