--- a/main_space/templates/main_space/user_profile.html
+++ b/main_space/templates/main_space/user_profile.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
-<title>{% block title %}Profil de {{ user.username }}{% endblock %}</title>
+{% block title %}Profil de {{ user.username }}{% endblock %}
 
 {% block content %}
     <main id="corps_mes_posts">
         <section style="display:flex;flex-direction:column;justify-content:center;align-items:center;" class="user_profile_infos">
             <h2 class="voir_posts_titre">PROFIL DE {{ user.username | upper}}</h2>
-            <img id="user_profile_picture" src="{{ user.profile_photo.url }}" alt="altitude" width="300" height="300" style="margin-bottom: 20px;border-radius: 50%;">
+            <img id="user_profile_picture" src="{{ user.profile_photo }}" alt="altitude" width="300" height="300" style="margin-bottom: 20px;border-radius: 50%;">
             <p class="user_infos" style="margin: 10px 0 5px 0;font-size: 21px;background-color: white;padding: 15px;width: 100%;box-shadow: 1px 1px 5px #222;">
                 Nom : <strong>{{ user.username }}</strong>
             </p>
