--- a/static/the_main_space/scss/style.scss
+++ b/static/the_main_space/scss/style.scss
@@ -255,7 +255,7 @@ body{
     width: 100%;
     height: 100%;
     margin: 0px 0 0 0;
-    padding: 5px 0 0 0;
+    padding: 20px;
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
@@ -328,7 +328,7 @@ body{
     width: 100%;
     height: 100%;
     margin: 0px 0 0 0;
-    padding: 5px 0 0 0;
+    padding: 20px;
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
@@ -341,6 +341,7 @@ body{
         font-family: 'Heebo', sans-serif;
         font-size: 80px;
         color: yellow;
+        margin: 0 auto;
         text-shadow: 1px 1px 1px #222222;
     }
     form {
@@ -358,24 +359,24 @@ body{
             text-align: center;
             border-radius: 5px;
             border: none;
-            margin-bottom: 30px;
+            margin: 0 auto;
             &:focus {
                 outline: none;
             }
         }
-        input#id_profile_photo {
-            padding: 0;
-            width:320px;
-            height: auto;
-            background: #222;
-            color: #fff;
-        }
-        input[type=file]::-webkit-file-upload-button {
-            background: red;
-            height: 40px;
-            border: none;
-            color: #fff;
-        }
+        // input#id_profile_photo {
+        //     padding: 0;
+        //     width:320px;
+        //     height: auto;
+        //     background: #222;
+        //     color: #fff;
+        // }
+        // input[type=file]::-webkit-file-upload-button {
+        //     background: red;
+        //     height: 40px;
+        //     border: none;
+        //     color: #fff;
+        // }
         button[type=submit] {
             color: #fff;
             margin: 20px auto 0 auto;
